--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,15 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@/*": [
+        "src/*"
+      ],
+      "@/prisma": [
+        "./src/prisma/*"
+      ]
+    },
+    "resolveJsonModule": true
   }
 }
