--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ REDIS_PORT=6379
 REDIS_USER=
 REDIS_PASSWORD=
 REDIS_DB=0
+
+DATABASE_URL=postgres://postgres:root@localhost:5432/sphere-ngk?schema=public&connect_timeout=30&pool_timeout=30&socket_timeout=30
