--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/platform-fastify": "^10.3.7",
     "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/websockets": "^10.3.7",
-    "@prisma/client": "5.13.0",
+    "@prisma/client": "^5.14.0",
     "@nestjs/cli": "^10.0.0",
     "ioredis": "^5.3.2",
     "qrcode": "^1.5.3",
