--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.13.0",
+    "prisma": "5.14.0",
     "socket.io-client": "^4.7.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
