--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "bun run dist/main.js",
+    "start:prod": "bun run dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:reset": "bunx prisma db push --force-reset"
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed/index.ts"
   },
   "dependencies": {
     "@golevelup/ts-jest": "^0.5.0",
