--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@nestjs/platform-fastify": "^10.3.7",
     "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/websockets": "^10.3.7",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.15.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ioredis": "^5.3.2",
@@ -57,7 +57,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "5.14.0",
+    "prisma": "^5.15.0",
     "socket.io-client": "^4.7.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
