feat: edit Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,9 @@ REDIS_USER=
 REDIS_PASSWORD=
 REDIS_DB=0
 
-DATABASE_URL=postgres://postgres:root@localhost:5432/sphere-ngk?schema=public&connect_timeout=30&pool_timeout=30&socket_timeout=30
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+POSTGRES_DB=sphere-ngk
+
+#DATABASE_URL=postgres://postgres:root@localhost:5432/sphere-ngk?schema=public&connect_timeout=30&pool_timeout=30&socket_timeout=30
+DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@host.docker.internal:5434/${POSTGRES_DB}?schema=public
