--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "NODE_ENV=dev nest start --watch",
-    "start:dev-home": "NODE_ENV=home-dev nest start --watch",
+    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
+    "start:dev-home": "cross-env NODE_ENV=home-dev nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV=prod node dist/src/main.js",
+    "start:prod": "cross-env NODE_ENV=prod node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,10 +21,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:reset": "bunx prisma db push --force-reset --skip-generate",
     "dev": "bun start:dev-home",
-    "prisma:seed-home": "NODE_ENV=dev-home npx ts-node ./prisma/seed/index.ts"
+    "prisma:seed-home": "cross-env NODE_ENV=dev-home npx ts-node ./prisma/seed/index.ts"
   },
   "prisma": {
-    "seed": "NODE_ENV=dev npx ts-node ./prisma/seed/index.ts"
+    "seed": "cross-env NODE_ENV=dev npx ts-node ./prisma/seed/index.ts"
   },
   "dependencies": {
     "@golevelup/ts-jest": "^0.5.0",
@@ -39,6 +39,7 @@
     "@prisma/client": "^5.15.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cross-env": "^7.0.3",
     "ioredis": "^5.3.2",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
