--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@golevelup/ts-jest": "^0.5.0",
+    "@nestjs/bull": "^10.1.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -37,9 +38,11 @@
     "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/websockets": "^10.3.7",
     "@prisma/client": "^5.15.0",
+    "bull": "^4.12.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
+    "dockerode": "^4.0.2",
     "ioredis": "^5.3.2",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
@@ -49,6 +52,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/dockerode": "^3.3.29",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
