--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@bull-board/nestjs": "^5.20.1",
     "@golevelup/ts-jest": "^0.5.0",
     "@nestjs/bull": "^10.1.1",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -41,13 +42,17 @@
     "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/websockets": "^10.3.7",
     "@prisma/client": "^5.15.0",
+    "@types/ioredis": "^5.0.0",
     "bull": "^4.12.9",
+    "cache-manager": "^5.6.1",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dockerode": "^4.0.2",
     "ioredis": "^5.3.2",
     "qrcode": "^1.5.3",
+    "redis": "^4.6.14",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -55,6 +60,8 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager": "^4.0.6",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/dockerode": "^3.3.29",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
@@ -76,22 +83,5 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
