--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/websockets": "^10.3.7",
     "@prisma/client": "^5.15.0",
-    "@types/ioredis": "^5.0.0",
     "bull": "^4.12.9",
     "cache-manager": "^5.6.1",
     "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
@@ -64,6 +64,7 @@
     "@types/cache-manager-redis-store": "^2.0.4",
     "@types/dockerode": "^3.3.29",
     "@types/express": "^4.17.17",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
