feat: adding choose board

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
+    "start:dev": "cross-env NODE_ENV=dev nest start --tsc --watch",
     "start:dev-home": "cross-env NODE_ENV=home-dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=prod node dist/src/main.js",
@@ -44,7 +44,6 @@
     "@prisma/client": "^5.15.1",
     "bull": "^4.12.9",
     "cache-manager": "^5.6.1",
-    "cache-manager-redis-store": "^3.0.1",
     "cache-manager-redis-yet": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
